--- a/index.html
+++ b/index.html
@@ -38,17 +38,29 @@
           <div class="burger_cubic1"></div>
           <li class="burger__list_item" style="background-color:#FE6F27;">
             <a class="burger__link animation_link" href="#header" onclick="fixBurger()">Главная</a>
-            <div class="blue_cubik_wrapper"><div class="black_cubik"></div><div class="black_cubik"></div><div class="black_cubik"></div></div>
+            <div class="blue_cubik_wrapper">
+              <div class="black_cubik"></div>
+              <div class="black_cubik"></div>
+              <div class="black_cubik"></div>
+            </div>
           </li>
           <li class="burger__list_item">
             <a class="burger__link animation_link" href="#services" onclick="fixBurger()">Услуги</a>
           </li>
           <li class="burger__list_item">
-            <div class="blue_cubik_wrapper2"><div class="blue_cubik"></div><div class="blue_cubik"></div><div class="blue_cubik"></div></div>
+            <div class="blue_cubik_wrapper2">
+              <div class="blue_cubik"></div>
+              <div class="blue_cubik"></div>
+              <div class="blue_cubik"></div>
+            </div>
             <a class="burger__link animation_link" href="#our_work" onclick="fixBurger()">Портфолио</a>
           </li>
-          <li class="burger__list_item" style="background-color:#FE6F27;" >
-            <div class="blue_cubik_wrapper3"><div class="blue_cubik"></div><div class="blue_cubik"></div><div class="blue_cubik"></div></div>
+          <li class="burger__list_item" style="background-color:#FE6F27;">
+            <div class="blue_cubik_wrapper3">
+              <div class="blue_cubik"></div>
+              <div class="blue_cubik"></div>
+              <div class="blue_cubik"></div>
+            </div>
             <a class="burger__link animation_link" href="#footer" onclick="fixBurger()">Контакты</a>
           </li>
           <div class="burger_cubic2"></div>
@@ -57,26 +69,26 @@
     </div>
   </header>
   <i>
-    <img src="./img/arrow1.svg" style="top: 50px;" class="arrow" alt="arrow" />
-    <img src="./img/arrow2.svg" style="top: 120px; left: 40px" class="arrow" alt="arrow2" />
-    <img src="./img/arrow3.svg" style="top: 130px; right: 20px" class="arrow" alt="arrow3" />
-    <img src="./img/arrow4.svg" style="top: 230px;" class="arrow" alt="arrow4" />
-    <img src="./img/arrow5.svg" style="top: 300px;" class="arrow" alt="arrow5" />
-    <img src="./img/arrow6.svg" style="top: 335px;left: 50vw;" class="arrow" alt="arrow6" />
-    <img src="./img/arrow7.svg" style="top: 550px;" class="arrow" alt="arrow7" />
-    <img src="./img/arrow8.svg" style="top: 630px; left: 5vw" class="arrow" alt="arrow8" />
-    <img src="./img/arrow8.svg" style="top: 650px; left: 70vw" class="arrow" alt="arrow9" />
-    <img src="./img/arrow9.svg" style="top: 600px; left: 50vw" class="arrow" alt="arrow9" />
-    <img src="./img/arrow10.svg" style="top: 700px;" class="arrow" alt="arrow10" />
-    <img src="./img/arrow11.svg" style="top: 830px;" class="arrow" alt="arrow11" />
-    <img src="./img/arrow12.svg" style="top: 985px;" class="arrow" alt="arrow12" />
-    <img src="./img/arrow13.svg" style="top: 1200px;" class="arrow" alt="arrow13" />
-    <img src="./img/arrow14.svg" style="top: 1450px; left: 45vw" class="arrow" alt="arrow14" />
-    <img src="./img/arrow15.svg" style="top: 1740px" class="arrow" alt="arrow15" />
-    <img src="./img/arrow16.svg" style="top: 1900px" class="arrow" alt="arrow16" />
-    <img src="./img/arrow17.svg" style="top: 2100px" class="arrow" alt="arrow17" />
-    <img src="./img/arrow18.svg" style="top: 2200px" class="arrow" alt="arrow18" />
-    <img src="./img/arrow19.svg" style="top: 2300px" class="arrow" alt="arrow19" />
+    <img src="./img/arrow1.svg" style="top: 50px;" class="arrow" alt="arrow"/>
+    <img src="./img/arrow2.svg" style="top: 120px; left: 40px" class="arrow" alt="arrow2"/>
+    <img src="./img/arrow3.svg" style="top: 130px; right: 20px" class="arrow" alt="arrow3"/>
+    <img src="./img/arrow4.svg" style="top: 230px;" class="arrow" alt="arrow4"/>
+    <img src="./img/arrow5.svg" style="top: 300px;" class="arrow" alt="arrow5"/>
+    <img src="./img/arrow6.svg" style="top: 335px;left: 50vw;" class="arrow" alt="arrow6"/>
+    <img src="./img/arrow7.svg" style="top: 550px;" class="arrow" alt="arrow7"/>
+    <img src="./img/arrow8.svg" style="top: 630px; left: 5vw" class="arrow" alt="arrow8"/>
+    <img src="./img/arrow8.svg" style="top: 650px; left: 70vw" class="arrow" alt="arrow9"/>
+    <img src="./img/arrow9.svg" style="top: 600px; left: 50vw" class="arrow" alt="arrow9"/>
+    <img src="./img/arrow10.svg" style="top: 700px;" class="arrow" alt="arrow10"/>
+    <img src="./img/arrow11.svg" style="top: 830px;" class="arrow" alt="arrow11"/>
+    <img src="./img/arrow12.svg" style="top: 985px;" class="arrow" alt="arrow12"/>
+    <img src="./img/arrow13.svg" style="top: 1200px;" class="arrow" alt="arrow13"/>
+    <img src="./img/arrow14.svg" style="top: 1450px; left: 45vw" class="arrow" alt="arrow14"/>
+    <img src="./img/arrow15.svg" style="top: 1740px" class="arrow" alt="arrow15"/>
+    <img src="./img/arrow16.svg" style="top: 1900px" class="arrow" alt="arrow16"/>
+    <img src="./img/arrow17.svg" style="top: 2100px" class="arrow" alt="arrow17"/>
+    <img src="./img/arrow18.svg" style="top: 2200px" class="arrow" alt="arrow18"/>
+    <img src="./img/arrow19.svg" style="top: 2300px" class="arrow" alt="arrow19"/>
   </i>
   <main class="main">
     <section class="welcome_section">
@@ -86,7 +98,7 @@
           <span class="blue_text">web</span>-разработке
         </h2>
         <a href="#form_section">
-          <div class="btn" >
+          <div class="btn">
             <!-- Текст -->
             <span class="btn-text">Оставить заявку</span>
             <!-- Засечки -->
@@ -169,13 +181,15 @@
             <ul class="splide__list">
               <li class="splide__slide">
                 <div class="slide_inforamtion">
-                  <h3 class="h3_text_services"><span class="blue_text">Web </span>Разработка</h3>
-                  <span class="span_services">от 55.000 ₽</span>
-                  <ul class="services_ul">
-                    <li><span class="services_li__span">Landing page</span></li>
-                    <li><span class="services_li__span">Разработки online магазинов</span></li>
-                    <li><span class="services_li__span">Разработка мобильных приложений</span></li>
-                  </ul>
+                  <div class="wrapper_card">
+                    <h3 class="h3_text_services" style="display: flex;justify-content: center;align-items: center;}"><span class="blue_text">Web </span>Разработка</h3>
+                    <span class="span_services">от 55.000 ₽</span>
+                    <ul class="services_ul">
+                      <li><span class="services_li__span">Landing page</span></li>
+                      <li><span class="services_li__span">Разработки online магазинов</span></li>
+                      <li><span class="services_li__span">Разработка мобильных приложений</span></li>
+                    </ul>
+                  </div>
                   <div class="services_btn">
                     <div class="services_btn_cubik_1"></div>
                     <span class="services_btn_text">Оставить заявку</span>
@@ -185,14 +199,16 @@
               </li>
               <li class="splide__slide">
                 <div class="slide_inforamtion">
-                  <h3 class="h3_text_services"><span class="blue_text">финансовые</span> и <span class="blue_text">бизнес</span>решения
-                  </h3>
-                  <span class="span_services">от 250.000 ₽</span>
-                  <ul class="services_ul">
-                    <li><span class="services_li__span">Разработки криптобирж</span></li>
-                    <li><span class="services_li__span">Разработки Разработка NFT и маркетплейсов</span></li>
-                    <li><span class="services_li__span">Написание корпоративных платформ</span></li>
-                  </ul>
+                  <div class="wrapper_card">
+                    <h3 class="h3_text_services"><span class="blue_text">финансовые</span> и <span class="blue_text">бизнес</span>решения
+                    </h3>
+                    <span class="span_services">от 250.000 ₽</span>
+                    <ul class="services_ul">
+                      <li><span class="services_li__span">Разработки криптобирж</span></li>
+                      <li><span class="services_li__span">Разработки Разработка NFT и маркетплейсов</span></li>
+                      <li><span class="services_li__span">Написание корпоративных платформ</span></li>
+                    </ul>
+                  </div>
                   <div class="services_btn" style="min-height: 30px">
                     <div class="services_btn_cubik_1"></div>
                     <span class="services_btn_text" style="margin-top: 3px" onclick="">Оставить заявку</span>
@@ -200,16 +216,19 @@
                   </div>
                 </div>
               </li>
-              <li class="splide__slide caru btn3" >
+              <li class="splide__slide caru btn3">
                 <div class="slide_inforamtion">
-                  <h3 class="h3_text_services"><span class="blue_text">доп.</span> услуги</h3>
-                  <div class="span_services">от 250.000 ₽</div>
-                  <ul class="services_ul">
-                    <li><span class="services_li__span">Разработки ботов для любых мессенджеров и соц.сетей</span></li>
-                    <li><span class="services_li__span">Браузерный game dev</span></li>
-                    <li><span class="services_li__span">Telegram game dev</span></li>
-                  </ul>
-                  <div class="services_btn" >
+                  <div class="wrapper_card">
+                    <h3 class="h3_text_services" style="display: flex;justify-content: center;align-items: center;}"><span class="blue_text">доп.</span> услуги</h3>
+                    <div class="span_services">от 250.000 ₽</div>
+                    <ul class="services_ul">
+                      <li><span class="services_li__span">Разработки ботов для любых мессенджеров и соц.сетей</span>
+                      </li>
+                      <li><span class="services_li__span">Браузерный game dev</span></li>
+                      <li><span class="services_li__span">Telegram game dev</span></li>
+                    </ul>
+                  </div>
+                  <div class="services_btn">
                     <div class="services_btn_cubik_1"></div>
                     <span class="services_btn_text">Оставить заявку</span>
                     <div class="services_btn_cubik_2"></div>
@@ -356,7 +375,7 @@
     // получаем div, на который будем вешать обработчик
     let myDiv = document.getElementsByClassName("btn3")[0];
     // назначаем обработчик события click на div
-    myDiv.addEventListener("click", function() {
+    myDiv.addEventListener("click", function () {
         // получаем элемент, до которого нужно прокрутить
         let myElement = document.getElementById("form_section");
         // прокручиваем страницу до элемента
