--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
       <nav class="burger">
         <ul class="burger__list">
           <div class="burger_cubic1"></div>
-          <li class="burger__list_item" style="background-color:#FE6F27;">
-            <a class="burger__link animation_link" href="#header" onclick="fixBurger()">Главная</a>
+          <li class="burger__list_item" style="background-color:#FE6F27;" onclick="fixBurger('footer')">
+            <a class="burger__link animation_link" href="#header">Главная</a>
             <div class="blue_cubik_wrapper">
               <div class="black_cubik"></div>
               <div class="black_cubik"></div>
               <div class="black_cubik"></div>
             </div>
           </li>
-          <li class="burger__list_item">
-            <a class="burger__link animation_link" href="#services" onclick="fixBurger()">Услуги</a>
+          <li class="burger__list_item" onclick="fixBurger('footer')">
+            <a class="burger__link animation_link" href="#services" >Услуги</a>
           </li>
-          <li class="burger__list_item">
+          <li class="burger__list_item" onclick="fixBurger('footer')">
             <div class="blue_cubik_wrapper2">
               <div class="blue_cubik"></div>
               <div class="blue_cubik"></div>
               <div class="blue_cubik"></div>
             </div>
-            <a class="burger__link animation_link" href="#our_work" onclick="fixBurger()">Портфолио</a>
+            <a class="burger__link animation_link" href="#our_work">Портфолио</a>
           </li>
-          <li class="burger__list_item" style="background-color:#FE6F27;">
+          <li class="burger__list_item" style="background-color:#FE6F27;" onclick="fixBurger('footer')">
             <div class="blue_cubik_wrapper3">
               <div class="blue_cubik"></div>
               <div class="blue_cubik"></div>
               <div class="blue_cubik"></div>
             </div>
-            <a class="burger__link animation_link" href="#footer" onclick="fixBurger()">Контакты</a>
+            <a class="burger__link animation_link" href="#footer" >Контакты</a>
           </li>
           <div class="burger_cubic2"></div>
         </ul>
@@ -190,11 +190,11 @@
                       <li><span class="services_li__span">Разработка мобильных приложений</span></li>
                     </ul>
                   </div>
-                  <div class="services_btn">
+                  <a class="services_btn" href="#form">
                     <div class="services_btn_cubik_1"></div>
                     <span class="services_btn_text">Оставить заявку</span>
                     <div class="services_btn_cubik_2"></div>
-                  </div>
+                  </a>
                 </div>
               </li>
               <li class="splide__slide">
@@ -209,11 +209,11 @@
                       <li><span class="services_li__span">Написание корпоративных платформ</span></li>
                     </ul>
                   </div>
-                  <div class="services_btn" style="min-height: 30px">
+                  <a class="services_btn" href="#form" style="min-height: 30px">
                     <div class="services_btn_cubik_1"></div>
-                    <span class="services_btn_text" style="margin-top: 3px" onclick="">Оставить заявку</span>
+                    <span class="services_btn_text" onclick="">Оставить заявку</span>
                     <div class="services_btn_cubik_2"></div>
-                  </div>
+                  </a>
                 </div>
               </li>
               <li class="splide__slide caru btn3">
@@ -228,11 +228,11 @@
                       <li><span class="services_li__span">Telegram game dev</span></li>
                     </ul>
                   </div>
-                  <div class="services_btn">
+                  <a class="services_btn" href="#form">
                     <div class="services_btn_cubik_1"></div>
                     <span class="services_btn_text">Оставить заявку</span>
                     <div class="services_btn_cubik_2"></div>
-                  </div>
+                  </a>
                 </div>
               </li>
             </ul>
